[gd_scene load_steps=30 format=2]

[ext_resource path="res://objects/3D/CityStatic.tscn" type="PackedScene" id=1]
[ext_resource path="res://ready_scene/models/character/rhea/rhea_spatial.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/3D/Trees.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/2D/SignalPlayer/Menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/layout/score_root.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/2D/SignalPlayer/BagPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/3D/Piano.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/layout/zhunXin_root.tscn" type="PackedScene" id=8]
[ext_resource path="res://objects/3D/Terrain/ShaMo.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/2D/default_grass.png" type="Texture" id=10]
[ext_resource path="res://objects/3D/Character/kizunaAI.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/2D/UI/right_64x.png" type="Texture" id=12]
[ext_resource path="res://objects/3D/building.tscn" type="PackedScene" id=13]
[ext_resource path="res://resource/font/puhuiti-rgular-20.tres" type="DynamicFont" id=14]
[ext_resource path="res://resource/font/puhuiti-rgular-40.tres" type="DynamicFont" id=16]
[ext_resource path="res://assets/2D/UI/TouchButton.png" type="Texture" id=17]
[ext_resource path="res://sounds/level/Juhani Junkala [Chiptune Adventures] 1. Stage 1.ogg" type="AudioStream" id=19]
[ext_resource path="res://scripts/LittleGame/Player.gd" type="Script" id=22]
[ext_resource path="res://scripts/LittleGame/SignlePlayer.gd" type="Script" id=23]
[ext_resource path="res://objects/2D/SignalPlayer/ItemSatck.tscn" type="PackedScene" id=24]
[ext_resource path="res://scripts/AI_test_Android/grab.gd" type="Script" id=25]
[ext_resource path="res://scripts/LittleGame/Camera.gd" type="Script" id=27]
[ext_resource path="res://scripts/LittleGame/ScoreRoot.gd" type="Script" id=28]
[ext_resource path="res://assets/2D/UI/music 32x32/piano.png" type="Texture" id=29]
[ext_resource path="res://scripts/LittleGame/RayCastCompent.gd" type="Script" id=31]

[sub_resource type="CylinderShape" id=12]
radius = 0.410735

[sub_resource type="BoxShape" id=10]
extents = Vector3( 500, 0.5, 1000 )

[sub_resource type="ProceduralSky" id=7]

[sub_resource type="Environment" id=8]
background_mode = 2
background_sky = SubResource( 7 )

[node name="SinglePlayer" type="Spatial"]
script = ExtResource( 23 )

[node name="Player" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.64744, 0.997222, -14.8093 )
script = ExtResource( 22 )

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 1.19509, 0 )
shape = SubResource( 12 )

[node name="rhea" parent="Player" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 3.72529e-09, 0, 1, 0, -3.72529e-09, 0, 1, 0, 0, 0 )

[node name="fps" type="Camera" parent="Player"]
transform = Transform( -0.111851, 0, -0.993725, 0, 1, 0, 0.993725, 0, -0.111851, 1.41946, 3.52758, 0.210223 )
visible = false

[node name="extra_testCam" type="Camera" parent="Player"]
transform = Transform( -1, 2.79397e-09, 7.07805e-08, 2.05254e-08, 0.972048, 0.234783, -7.07805e-08, 0.234783, -0.972048, 1.35608, 4.19914, -3.74139 )
visible = false

[node name="selfCam" type="Camera" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.99735, 1.61124 )
current = true
far = 8192.0
__meta__ = {
"_editor_description_": "用于返照的摄像头"
}

[node name="RayCast" type="RayCast" parent="Player"]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, 0.869538, -0.493866, 0, 0.493866, 0.869538, 0, 1.21977, 0 )
enabled = true
cast_to = Vector3( 0, 0, 8 )
script = ExtResource( 31 )

[node name="CameraRoot" type="Spatial" parent="Player"]
script = ExtResource( 27 )

[node name="h" type="Spatial" parent="Player/CameraRoot"]

[node name="v" type="Spatial" parent="Player/CameraRoot/h"]

[node name="thirdCam" type="ClippedCamera" parent="Player/CameraRoot/h/v"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.962919, -1.4916 )
current = true
far = 8192.0

[node name="treeSceneRoot" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -35.9343, 0.39092, 18 )

[node name="Floor" type="StaticBody" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite3D" type="Sprite3D" parent="Floor"]
transform = Transform( 1000, 0, 0, 0, -4.37114e-05, -1000, 0, 1000, -4.37114e-05, -0.00437784, -0.00483245, -0.0378042 )
texture = ExtResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
shape = SubResource( 10 )

[node name="Menu" parent="." instance=ExtResource( 4 )]
visible = false

[node name="ScoreRoot" parent="." instance=ExtResource( 5 )]
position = Vector2( 1.8526, -1.43442 )
script = ExtResource( 28 )

[node name="Bag" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Piano" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.07451, 0.956136, -13.7912 )

[node name="zhunXin_root" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( -250, -70 )

[node name="ShaMo" parent="." instance=ExtResource( 9 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -287.47, 0, 49.0272 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )

[node name="bgm" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 19 )
autoplay = true

[node name="tinys" type="Spatial" parent="."]

[node name="buildings" type="Spatial" parent="."]

[node name="city_root" parent="buildings" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.55145, 0, 0 )
visible = false

[node name="city_root2" parent="buildings" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.07217, 0, 0 )
visible = false

[node name="city_root3" parent="buildings" instance=ExtResource( 1 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -12.4842, 2.41858, 28.8305 )

[node name="city_root4" parent="buildings" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15.8536, 0, 0 )
visible = false

[node name="building" parent="buildings" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 29.9072, -0.84846, 10.2974 )

[node name="building2" parent="buildings" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.0928, 0.15154, 8.5755 )

[node name="building3" parent="buildings" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.5223, 3.15154, 15.5755 )

[node name="building4" parent="buildings" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.5223, 3.15154, 11.4209 )

[node name="building5" parent="buildings" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.6246, 0.15154, 11.4209 )

[node name="building6" parent="buildings" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.6246, -0.84846, 5.84924 )

[node name="building7" parent="buildings" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6246, 0.15154, -2.37711 )

[node name="building8" parent="buildings" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6246, -0.0261962, -5.9044 )

[node name="building9" parent="buildings" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6246, 0.15154, -9.99625 )

[node name="building10" parent="buildings" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.6246, 0.15154, -13.5804 )

[node name="building11" parent="buildings" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.6246, 0.15154, -20.8932 )

[node name="building13" parent="buildings" instance=ExtResource( 13 )]
transform = Transform( 10, 0, 0, 0, 9.89109, 1.47185, 0, -1.47185, 9.89109, -247.234, 8.16854, 34.2236 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.436347, 0.899779, 0, -0.899779, -0.436347, 0, 4.10933, -3.70749 )
light_energy = 0.706
shadow_enabled = true

[node name="kizunaAI2" parent="." instance=ExtResource( 11 )]
transform = Transform( 0.178862, 0, -0.466385, 0, 0.5, 0, 0.466385, 0, 0.178862, -30.526, 0, 21.1476 )

[node name="ItemStack" parent="." instance=ExtResource( 24 )]
position = Vector2( 350.327, 654.41 )

[node name="Sprite" parent="ItemStack/SlotContainer/Slot" index="1"]
position = Vector2( 31.7798, 32.651 )
scale = Vector2( 1.77416, 1.94725 )
texture = ExtResource( 29 )

[node name="MobileControl" type="Node2D" parent="."]

[node name="MenuButton" type="Button" parent="MobileControl"]
margin_left = -2.0
margin_top = 7.0
margin_right = 92.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 16 )
text = "菜单"

[node name="BagButton" type="Button" parent="MobileControl"]
margin_left = 104.897
margin_top = 7.8308
margin_right = 194.898
margin_bottom = 68.8308
custom_fonts/font = ExtResource( 16 )
text = "背包"

[node name="DebugCollisionButton" type="CheckButton" parent="MobileControl"]
margin_left = 210.142
margin_top = 9.61461
margin_right = 485.142
margin_bottom = 72.6146
custom_fonts/font = ExtResource( 16 )
text = "碰撞箱显示"

[node name="grab" type="TouchScreenButton" parent="MobileControl"]
position = Vector2( 1192.09, 644.434 )
visibility_mode = 1
script = ExtResource( 25 )

[node name="up" type="TouchScreenButton" parent="MobileControl"]
position = Vector2( 95.6768, 620.665 )
rotation = -1.5708
normal = ExtResource( 12 )
visibility_mode = 1

[node name="grow" type="TouchScreenButton" parent="MobileControl"]
position = Vector2( 982.354, 628.19 )
rotation = 0.00084541
normal = ExtResource( 17 )
visibility_mode = 1

[node name="growLabel" type="Label" parent="MobileControl"]
margin_left = 996.761
margin_top = 690.435
margin_right = 1036.76
margin_bottom = 718.435
custom_fonts/font = ExtResource( 14 )
text = "变大"

[node name="shrunk" type="TouchScreenButton" parent="MobileControl"]
position = Vector2( 1050.22, 628.397 )
normal = ExtResource( 17 )
visibility_mode = 1

[node name="shunkLabel" type="Label" parent="MobileControl"]
margin_left = 1061.94
margin_top = 691.812
margin_right = 1101.94
margin_bottom = 719.812
custom_fonts/font = ExtResource( 14 )
text = "变小"

[node name="down" type="TouchScreenButton" parent="MobileControl"]
position = Vector2( 150.707, 605.128 )
normal = ExtResource( 12 )
visibility_mode = 1

[node name="left" type="TouchScreenButton" parent="MobileControl"]
position = Vector2( 108.998, 671.072 )
rotation = -3.14159
normal = ExtResource( 12 )
visibility_mode = 1

[node name="right" type="TouchScreenButton" parent="MobileControl"]
position = Vector2( 164.647, 655.67 )
rotation = 1.5708
normal = ExtResource( 12 )
visibility_mode = 1

[connection signal="visibility_changed" from="Menu" to="Menu" method="_on_Menu_visibility_changed"]
[connection signal="pressed" from="MobileControl/MenuButton" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="MobileControl/BagButton" to="Bag" method="_on_BagButton_pressed"]
[connection signal="toggled" from="MobileControl/DebugCollisionButton" to="." method="_on_DebugCollisionButton_toggled"]
[connection signal="pressed" from="MobileControl/up" to="Player" method="_on_up_pressed"]
[connection signal="released" from="MobileControl/up" to="Player" method="_on_up_released"]
[connection signal="pressed" from="MobileControl/grow" to="Player" method="_on_grow_pressed"]
[connection signal="pressed" from="MobileControl/shrunk" to="Player" method="_on_shrunk_pressed"]

[editable path="treeSceneRoot"]
[editable path="ItemStack"]
[editable path="ItemStack/SlotContainer/Slot"]
